# panicui

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
examples/basic_panic/: Cargo.toml
examples/basic_panic/src/: main.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
src/: app.rs  lib.rs  style.rs  window.rs
