[package]
name = "panicui"
version = "0.1.0"
edition = "2021"
description = "The needed solution for panicking with user interface."
license-file = "LICENSE"
categories = ["development-tools", "development-tools::debugging", "gui"]
keywords = ["panic", "ui", "gui", "panic-ui", "debug"]
repository = "https://github.com/imajindevon/panicui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "1.3.27" }

[features]
default = ["bundled"]
bundled = ["fltk/fltk-bundled"]
shared = ["fltk/fltk-shared"]
